# HCP-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
cpp/: CMakeLists.txt
cpp/include/hcp/: net.hpp  protocol.hpp
cpp/src/: net.cpp  worker_main.cpp
examples/: benchmark.yaml  benchmark_cpp.yaml  two_hosts_same_switch.yaml
python/hcpbench/: __init__.py  __main__.py  cli.py  metrics.py  orchestrator.py  protocol.py  report.py  worker_py.py
scripts/: build_cpp.ps1  compare_backends.ps1
tests/: test_metrics.py  test_protocol.py
