[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hcpbench"
version = "1.0.0"
description = "HPC-scale distributed compute benchmark suite (throughput, latency, jitter)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AltUser44" }]
keywords = ["hpc", "benchmark", "distributed", "latency", "throughput"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
hcpbench = "hcpbench.cli:main"

[project.urls]
Homepage = "https://github.com/AltUser44/HCP-bench"

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]
